# openchami-release

./: README.md  openchami.spec
deploy-openchami/: COMPATIBILITY.md  README.md  noxfile.py  pyproject.toml
deploy-openchami/deploy_openchami/: __main__.py  config.py  deploy_openchami.py  error.py  orchestrator.py
deploy-openchami/deploy_openchami/config/: README.md  config.yaml
deploy-openchami/deploy_openchami/templates/: OpenCHAMI-Deploy.sh  README.md  minio.container  nodes.yaml  openchami-net.xml  prep_setup.sh  registry.container  s3cfg
install-openchami/: README.md  noxfile.py  pyproject.toml
install-openchami/install_openchami/: __init__.py  __main__.py  config.py  error.py  install_openchami.py  installer.py
install-openchami/install_openchami/config/: README.md  config.yaml
install-openchami/install_openchami/templates/: Corefile  OpenCHAMI-Install.sh  README.md  bmc_info.json  build-image.sh  coredhcp.yaml  prep_setup.sh  prepare_host.sh  s3-public-read-efi.json.license  s3cfg
scripts/: openchami_profile.sh
systemd/containers/: boot-service.container  coresmd-coredhcp.container  coresmd-coredns.container  metadata-service.container
